# onepass

./: .gitignore  Cargo.toml  HACKING.md  LICENSE  README.md  build.rs  next-crypto.md  onepass.entitlements  onepass.provisionprofile
.githook/: pre-commit
.githooks/: pre-commit
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yaml  release.yaml
crates/base/: Cargo.toml
crates/base/src/: dict.rs  fmt.rs  lib.rs
crates/conf/: Cargo.toml
crates/conf/src/: dirs.rs  lib.rs
crates/seed/: Cargo.toml  build.rs
crates/seed/src/: crypto.rs  data.rs  dict.rs  fmt.rs  lib.rs  site.rs  url.rs
crates/seed/src/expr/: chars.rs  context.rs  fmt.rs  generator.rs  mod.rs  node.rs  parse.rs  repr.rs  util.rs
data/: Info.plist  onepass.entitlements
example/: config.toml  config.yaml
src/: config.rs  crypto.rs  keyring.rs  macos_keychain.rs  main.rs  randexp.rs  seed_password.rs  url.rs
src/config/: dirs.rs  home.rs  mod.rs
src/randexp/: mod.rs  quantifiable.rs
src/seed_password/: getpass.rs  keyring.rs  mod.rs
src/seed_password/keyring/: macos_keychain.rs  mod.rs
