[package]
name = "onepass"
version = "2.2.5"
categories = ["command-line-utilities"]
edition = "2024"
keywords = ["password", "cryptography", "deterministic"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mrdomino/onepass"
description = "A mostly-stateless deterministic password manager"

exclude = [
    ".githook/*",
    ".github/**",
    ".gitignore",
    "example/**",
    "data/onepass.entitlements",
    "onepass.provisionprofile",
]

[features]
default = [
    "keyring",
    "readpass-vendored",
]
macos-biometry = [
    "objc2",
    "objc2-core-foundation",
    "objc2-foundation",
    "objc2-local-authentication",
    "objc2-security",
]
readpass-libbsd = ["readpassphrase-3/libbsd-static"]
readpass-vendored = ["readpassphrase-3/linux-vendored"]

[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.6.0-rc.1", features = ["zeroize"] }
char-iter = "0.1.0"
clap = { version = "4.5.48", features = ["derive", "env", "unicode", "wrap_help"] }
crypto-bigint = { version = "0.7.0-rc.6", features = ["rand_core", "zeroize"] }
nom = "8.0.0"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
serde = { version = "1.0.224", features = ["derive"] }
serde_yaml = "0.9.34"
url = "2.5.6"
zeroize = "1.8.1"

[dependencies.readpassphrase-3]
version = "1.0.1"
default-features = false
features = [
    "windows-vendored",
    "zeroize",
]

[dependencies.keyring]
version = "3.6.3"
features = [
    "sync-secret-service",
    "apple-native",
    "windows-native",
    "crypto-openssl",
]
optional = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.2", optional = true }
objc2-core-foundation = { version = "0.3.1", optional = true }
objc2-foundation = { version = "0.3.1", optional = true }
objc2-local-authentication = { version = "0.3.1", optional = true }
objc2-security = { version = "0.3.1", optional = true }

[dev-dependencies]
num-traits = "0.2.19"
tempfile = "3.22.0"
