[package]
name = "onepass"
version.workspace = true
categories = ["command-line-utilities"]
edition.workspace = true
keywords = ["password", "cryptography", "deterministic"]
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A mostly-stateless deterministic password manager"

exclude = [
    ".githook/*",
    ".github/**",
    ".gitignore",
    "example/**",
    "data/onepass.entitlements",
    "onepass.provisionprofile",
]

[workspace]
resolver = "3"
members = ["crates/base", "crates/seed"]

[workspace.package]
version = "3.0.0-pre.0"
edition = "2024"
license = "AGPL"
repository = "https://github.com/mrdomino/onepass"

[features]
default = [
    "keyring",
    "readpass-vendored",
]
macos-biometry = [
    "objc2",
    "objc2-core-foundation",
    "objc2-foundation",
    "objc2-local-authentication",
    "objc2-security",
]
readpass-libbsd = ["readpassphrase-3/libbsd-static"]
readpass-vendored = ["readpassphrase-3/linux-vendored"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env", "unicode", "wrap_help"] }
onepass-seed = { path = "crates/seed" }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
zeroize = "1.8.2"

[dependencies.readpassphrase-3]
version = "1.0.2"
default-features = false
features = [
    "windows-vendored",
    "zeroize",
]

[dependencies.keyring]
version = "3.6.3"
features = [
    "sync-secret-service",
    "apple-native",
    "windows-native",
    "crypto-openssl",
]
optional = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3", optional = true }
objc2-core-foundation = { version = "0.3.2", optional = true }
objc2-foundation = { version = "0.3.2", optional = true }
objc2-local-authentication = { version = "0.3.2", optional = true }
objc2-security = { version = "0.3.2", optional = true }

[dev-dependencies]
tempfile = "3.24.0"
