[package]
name = "onepass"
version = "3.0.0-pre.0"
categories = ["command-line-utilities"]
edition.workspace = true
keywords = ["password", "cryptography", "deterministic"]
license = "AGPL-3.0-only"
readme = "README.md"
repository.workspace = true
description = "A mostly-stateless deterministic password manager"

exclude = [
    ".githook/*",
    ".github/**",
    ".gitignore",
    "example/**",
    "data/onepass.entitlements",
    "onepass.provisionprofile",
]

[workspace]
resolver = "3"
members = ["crates/base", "crates/conf", "crates/seed"]

[workspace.package]
edition = "2024"
repository = "https://github.com/mrdomino/onepass"

[features]
default = [
    "keyring",
    "readpass-vendored",
]
macos-biometry = [
    "objc2",
    "objc2-core-foundation",
    "objc2-foundation",
    "objc2-local-authentication",
    "objc2-security",
]
readpass-libbsd = ["readpassphrase-3/libbsd-static"]
readpass-vendored = ["readpassphrase-3/linux-vendored"]

[patch.crates-io]
onepass-base = { path = "crates/base" }
onepass-conf = { path = "crates/conf" }
onepass-seed = { path = "crates/seed" }

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env", "unicode", "wrap_help"] }
onepass-conf = "0.2.0"
onepass-seed = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
zeroize = "1.8.2"

[dependencies.readpassphrase-3]
version = "1.0.2"
default-features = false
features = [
    "windows-vendored",
    "zeroize",
]

[dependencies.keyring]
version = "3.6.3"
features = [
    "sync-secret-service",
    "apple-native",
    "windows-native",
    "crypto-openssl",
]
optional = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3", optional = true }
objc2-core-foundation = { version = "0.3.2", optional = true }
objc2-foundation = { version = "0.3.2", optional = true }
objc2-local-authentication = { version = "0.3.2", optional = true }
objc2-security = { version = "0.3.2", optional = true }

[dev-dependencies]
tempfile = "3.24.0"
