[package]
name = "onepass-base"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
blake2 = { version = "0.11.0-rc.3", default-features = false }
digest = { version = "0.11.0-rc.4", default-features = false }

[dev-dependencies]
hex = "0.4.3"
