[package]
name = "onepass-base"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Basic formatting and word lists for the onepass password manager"

[dependencies]
blake2 = { version = "0.11.0-rc.3", default-features = false }
digest = { version = "0.11.0-rc.4", default-features = false }

[dev-dependencies]
hex = "0.4.3"
