[package]
name = "onepass-base"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "Basic formatting and word lists for the onepass password manager"

[dependencies]
blake2 = { version = "0.11.0-rc.5", default-features = false }
digest = { version = "0.11.0", default-features = false }
hex = { version = "0.4.3", default-features = false }

[dev-dependencies]
hex = "0.4.3"
