[package]
name = "onepass-conf"
version = "0.3.1"
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "TOML configuration format for onepass"

[dependencies]
onepass-seed = "0.2.0"
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
toml = "1.0.2"

[dev-dependencies]
tempfile = "3.25.0"
