[package]
name = "onepass-conf"
version = "0.5.0"
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "TOML configuration format for onepass"

[dependencies]
onepass-seed = "0.3.2"
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
toml = "1.1.1"

[dev-dependencies]
tempfile = "3.27.0"
