[package]
name = "onepass-seed"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
argon2 = { version = "0.6.0-rc.5", default-features = false, features = ["alloc", "parallel", "zeroize"] }
blake2 = { version = "0.11.0-rc.3", default-features = false }
chacha20 = { version = "0.10.0-rc.6", default-features = false, features = ["rng", "zeroize"] }
crypto-bigint = { version = "0.7.0-rc.10", default-features = false, features = ["rand_core", "zeroize"] }
onepass-base = { path = "../base" }
rand_core = "0.10.0-rc-3"
zeroize = { version = "1.8.2", default-features = false }

[dev-dependencies]
hex = "0.4.3"

[build-dependencies]
onepass-base = { path = "../base" }
