[package]
name = "onepass-seed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for the onepass password manager"

[dependencies]
argon2 = { version = "0.6.0-rc.5", default-features = false, features = ["alloc", "parallel", "zeroize"] }
blake2 = { version = "0.11.0-rc.3", default-features = false }
chacha20 = { version = "0.10.0-rc.6", default-features = false, features = ["rng", "zeroize"] }
crypto-bigint = { version = "0.7.0-rc.10", default-features = false, features = ["rand_core", "zeroize"] }
hex = { version = "0.4.3", default-features = false }
nom = "8.0.0"
onepass-base = "3.0.0-pre.0"
rand_core = "0.10.0-rc-3"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
url = { version = "2.5.8", default-features = false }
zeroize = { version = "1.8.2", default-features = false, features = ["alloc"] }

[dev-dependencies]
hex = "0.4.3"
num-traits = "0.2.19"

[build-dependencies]
onepass-base = "3.0.0-pre.0"
