[package]
name = "onepass-seed"
version = "0.2.0"
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "Core functionality for onepass"

[dependencies]
argon2 = { version = "0.6.0-rc.7", default-features = false, features = ["alloc", "parallel", "zeroize"] }
blake2 = { version = "0.11.0-rc.5", default-features = false }
chacha20 = { version = "0.10.0", default-features = false, features = ["rng", "zeroize"] }
crypto-bigint = { version = "0.7.0-rc.27", default-features = false, features = ["rand_core", "zeroize"] }
hex = { version = "0.4.3", default-features = false }
nom = "8.0.0"
onepass-base = "0.1.0"
rand_core = "0.10.0"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
url = { version = "2.5.8", default-features = false }
zeroize = { version = "1.8.2", default-features = false, features = ["alloc"] }

[dev-dependencies]
hex = "0.4.3"
num-traits = "0.2.19"

[build-dependencies]
onepass-base = "0.1.0"
